--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -20,6 +20,12 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
 
+      - name: Installer Tesseract OCR
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y tesseract-ocr tesseract-ocr-fra
+
+
       - name: Run scraper
         run: python scrape_concours.py
 
